[package]
name = "rbak"
version = "1.0.0"
edition = "2021"
description = "Simple Rust CLI backup tool: files → .bak, directories → _bak (recursive)"
license = "MIT"
repository = "https://github.com/A-Young-Git/rbak"
readme = "README.md"
keywords = ["cli", "backup", "filesystem"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.23.0"
